--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "d5dcd1671027a991",
+        "id": "de25cc1d860fb4bd",
         "type": "leaf",
         "state": {
           "type": "empty",
@@ -82,16 +82,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "d5dcd1671027a991",
+  "active": "de25cc1d860fb4bd",
   "lastOpenFiles": [
+    "README.md",
+    "技术知识/其它/git-maven/maven打包语句.md",
+    "技术知识/其它/git-maven/Git常用命令速查表（收藏大全）.md",
+    "技术知识/Java/Java中执行Jar中某一个类.md",
     "Pasted image 20220325114917.png",
     "技术知识/运维/Linux ping与telnet判断网络问题.md",
     "Pasted image 20220325114030.png.md",
     "Pasted image 20220325114030.png",
     "技术知识/Java/ActiveMQ学习.md",
-    "技术知识/Java/Spring常用注解（收藏大全）.md",
-    "README.md",
-    "SUMMARY.md",
-    "测试/利用PowerMockito实现单测.md"
+    "技术知识/Java/Spring常用注解（收藏大全）.md"
   ]
 }
