--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,5 +2,6 @@
   "legacyEditor": false,
   "livePreview": true,
   "promptDelete": false,
-  "fileSortOrder": "byCreatedTime"
+  "fileSortOrder": "byCreatedTimeReverse",
+  "communityThemeSortOrder": "download"
 }
